{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 70,
  "lineage": "045c6dd2-e75e-bbfc-146f-f5832aca4c99",
  "resources": [
    {
      "module": "module.ecs[\"eu-west-1\"]",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:511620223753:listener/app/eu-west-1-public-alb/6d1ee215f8bd896b/e0ee1ae049481c0c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:511620223753:targetgroup/tf-20210301151727591400000002/d0f107eeaf9eff3b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:511620223753:listener/app/eu-west-1-public-alb/6d1ee215f8bd896b/e0ee1ae049481c0c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:511620223753:loadbalancer/app/eu-west-1-public-alb/6d1ee215f8bd896b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_lb_target_group.alb_target_group",
            "module.networking.aws_efs_file_system.ecs_efs",
            "module.networking.aws_efs_mount_target.private_subnets",
            "module.networking.aws_eip.ngw",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_lb.public_alb",
            "module.networking.aws_nat_gateway.ngw",
            "module.networking.aws_network_acl.public_nacl",
            "module.networking.aws_route_table.private_rt",
            "module.networking.aws_route_table.public_rt",
            "module.networking.aws_route_table_association.private_assoc",
            "module.networking.aws_route_table_association.public_assoc",
            "module.networking.aws_security_group.private_security_group",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.main",
            "module.s3-storage.aws_s3_bucket.alb_logs",
            "module.s3-storage.aws_s3_bucket_policy.access_logs",
            "module.vpc-peering.aws_vpc_peering_connection.peer"
          ]
        }
      ]
    },
    {
      "module": "module.ecs[\"eu-west-1\"]",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:511620223753:targetgroup/tf-20210301151727591400000002/d0f107eeaf9eff3b",
            "arn_suffix": "targetgroup/tf-20210301151727591400000002/d0f107eeaf9eff3b",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:511620223753:targetgroup/tf-20210301151727591400000002/d0f107eeaf9eff3b",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-20210301151727591400000002",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "eu-west-1_lb_tg"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0b1e757c06d1a6469"
          },
          "dependencies": [
            "module.networking.aws_efs_file_system.ecs_efs",
            "module.networking.aws_efs_mount_target.private_subnets",
            "module.networking.aws_eip.ngw",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_lb.public_alb",
            "module.networking.aws_nat_gateway.ngw",
            "module.networking.aws_network_acl.public_nacl",
            "module.networking.aws_route_table.private_rt",
            "module.networking.aws_route_table.public_rt",
            "module.networking.aws_route_table_association.private_assoc",
            "module.networking.aws_route_table_association.public_assoc",
            "module.networking.aws_security_group.private_security_group",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.main",
            "module.s3-storage.aws_s3_bucket.alb_logs",
            "module.s3-storage.aws_s3_bucket_policy.access_logs",
            "module.vpc-peering.aws_vpc_peering_connection.peer"
          ]
        }
      ]
    },
    {
      "module": "module.ecs[\"us-east-1\"]",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:511620223753:listener/app/us-east-1-public-alb/810f675a91a77c49/1ef785a85894b8fb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:511620223753:targetgroup/tf-20210301151727591300000001/b9502c59e587cf4a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:511620223753:listener/app/us-east-1-public-alb/810f675a91a77c49/1ef785a85894b8fb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:511620223753:loadbalancer/app/us-east-1-public-alb/810f675a91a77c49",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_lb_target_group.alb_target_group",
            "module.networking.aws_efs_file_system.ecs_efs",
            "module.networking.aws_efs_mount_target.private_subnets",
            "module.networking.aws_eip.ngw",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_lb.public_alb",
            "module.networking.aws_nat_gateway.ngw",
            "module.networking.aws_network_acl.public_nacl",
            "module.networking.aws_route_table.private_rt",
            "module.networking.aws_route_table.public_rt",
            "module.networking.aws_route_table_association.private_assoc",
            "module.networking.aws_route_table_association.public_assoc",
            "module.networking.aws_security_group.private_security_group",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.main",
            "module.s3-storage.aws_s3_bucket.alb_logs",
            "module.s3-storage.aws_s3_bucket_policy.access_logs",
            "module.vpc-peering.aws_vpc_peering_connection.peer"
          ]
        }
      ]
    },
    {
      "module": "module.ecs[\"us-east-1\"]",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:511620223753:targetgroup/tf-20210301151727591300000001/b9502c59e587cf4a",
            "arn_suffix": "targetgroup/tf-20210301151727591300000001/b9502c59e587cf4a",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:511620223753:targetgroup/tf-20210301151727591300000001/b9502c59e587cf4a",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-20210301151727591300000001",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "us-east-1_lb_tg"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0aadd4a70cf09289f"
          },
          "dependencies": [
            "module.networking.aws_efs_file_system.ecs_efs",
            "module.networking.aws_efs_mount_target.private_subnets",
            "module.networking.aws_eip.ngw",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_lb.public_alb",
            "module.networking.aws_nat_gateway.ngw",
            "module.networking.aws_network_acl.public_nacl",
            "module.networking.aws_route_table.private_rt",
            "module.networking.aws_route_table.public_rt",
            "module.networking.aws_route_table_association.private_assoc",
            "module.networking.aws_route_table_association.public_assoc",
            "module.networking.aws_security_group.private_security_group",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.main",
            "module.s3-storage.aws_s3_bucket.alb_logs",
            "module.s3-storage.aws_s3_bucket_policy.access_logs",
            "module.vpc-peering.aws_vpc_peering_connection.peer"
          ]
        }
      ]
    },
    {
      "module": "module.endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511620223753:vpc-endpoint/vpce-01ff1f5be591f5bb5",
            "dns_entry": [
              {
                "dns_name": "vpce-01ff1f5be591f5bb5-f0pc2hb1.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-01ff1f5be591f5bb5-f0pc2hb1-us-east-1b.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-01ff1f5be591f5bb5-f0pc2hb1-us-east-1a.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "api.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z06224892HFJS52JGV2BJ"
              }
            ],
            "id": "vpce-01ff1f5be591f5bb5",
            "network_interface_ids": [
              "eni-0b5351a45fed5fb9f",
              "eni-0fc2299054877e175"
            ],
            "owner_id": "511620223753",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-010c3a8d75fb1662a"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.api",
            "state": "available",
            "subnet_ids": [
              "subnet-009e5536c92063b3b",
              "subnet-02e14f075abee0565"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0aadd4a70cf09289f"
          },
          "dependencies": [
            "module.networking.aws_security_group.private_security_group",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511620223753:vpc-endpoint/vpce-055f2b1f527edb218",
            "dns_entry": [
              {
                "dns_name": "vpce-055f2b1f527edb218-t5l0v85a.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-055f2b1f527edb218-t5l0v85a-us-east-1b.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-055f2b1f527edb218-t5l0v85a-us-east-1a.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z08455221C35NYK06CA3B"
              },
              {
                "dns_name": "*.dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z08455221C35NYK06CA3B"
              }
            ],
            "id": "vpce-055f2b1f527edb218",
            "network_interface_ids": [
              "eni-036b0f59b8ac8d048",
              "eni-0db245757177a6db8"
            ],
            "owner_id": "511620223753",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-010c3a8d75fb1662a"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.dkr",
            "state": "available",
            "subnet_ids": [
              "subnet-009e5536c92063b3b",
              "subnet-02e14f075abee0565"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0aadd4a70cf09289f"
          },
          "dependencies": [
            "module.networking.aws_security_group.private_security_group",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511620223753:vpc-endpoint/vpce-07978c2ffa2836926",
            "cidr_blocks": [
              "54.231.0.0/17",
              "52.216.0.0/15",
              "3.5.0.0/18"
            ],
            "id": "vpce-07978c2ffa2836926",
            "owner_id": "511620223753",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0aadd4a70cf09289f"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking[\"eu-west-1\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-052274760f57d3015",
            "domain": "vpc",
            "id": "eipalloc-0bc6531e2cbd1ff03",
            "network_border_group": "us-east-1",
            "network_interface": "eni-092b5e3dedc6b7c7d",
            "private_dns": "ip-10-1-1-251.ec2.internal",
            "private_ip": "10.1.1.251",
            "public_dns": "ec2-54-159-109-206.compute-1.amazonaws.com",
            "public_ip": "54.159.109.206",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0d693a75015920235",
            "domain": "vpc",
            "id": "eipalloc-098f34ceb86bc4d2a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01b1c745ef939c604",
            "private_dns": "ip-10-1-2-38.ec2.internal",
            "private_ip": "10.1.2.38",
            "public_dns": "ec2-34-233-196-94.compute-1.amazonaws.com",
            "public_ip": "34.233.196.94",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking[\"eu-west-1\"]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511620223753:internet-gateway/igw-0225735c0be243990",
            "id": "igw-0225735c0be243990",
            "owner_id": "511620223753",
            "tags": {
              "Name": "eu-west-1_gw"
            },
            "vpc_id": "vpc-0b1e757c06d1a6469"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking[\"eu-west-1\"]",
      "mode": "managed",
      "type": "aws_lb",
      "name": "public_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "nginx-hello-world-alb-logs-eu-west-1",
                "enabled": true
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:511620223753:loadbalancer/app/eu-west-1-public-alb/6d1ee215f8bd896b",
            "arn_suffix": "app/eu-west-1-public-alb/6d1ee215f8bd896b",
            "dns_name": "eu-west-1-public-alb-101330856.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:511620223753:loadbalancer/app/eu-west-1-public-alb/6d1ee215f8bd896b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "eu-west-1-public-alb",
            "security_groups": [
              "sg-0b6f2b5551ad76dc2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0467efc6e0af48d56"
              },
              {
                "subnet_id": "subnet-065e6d51f6853d34f"
              }
            ],
            "subnets": [
              "subnet-0467efc6e0af48d56",
              "subnet-065e6d51f6853d34f"
            ],
            "tags": {
              "Name": "eu-west-1_public_alb"
            },
            "vpc_id": "vpc-0b1e757c06d1a6469",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.networking.aws_security_group.private_security_group",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.main",
            "module.s3-storage.aws_s3_bucket.alb_logs",
            "module.s3-storage.aws_s3_bucket_policy.access_logs"
          ]
        }
      ]
    },
    {
      "module": "module.networking[\"eu-west-1\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bc6531e2cbd1ff03",
            "id": "nat-0656462d0e0dd8431",
            "network_interface_id": "eni-092b5e3dedc6b7c7d",
            "private_ip": "10.1.1.251",
            "public_ip": "54.159.109.206",
            "subnet_id": "subnet-0467efc6e0af48d56",
            "tags": {
              "Name": "us-east-1a_ngw"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.ngw",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-098f34ceb86bc4d2a",
            "id": "nat-0524a5171a044c67e",
            "network_interface_id": "eni-01b1c745ef939c604",
            "private_ip": "10.1.2.38",
            "public_ip": "34.233.196.94",
            "subnet_id": "subnet-065e6d51f6853d34f",
            "tags": {
              "Name": "us-east-1b_ngw"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.ngw",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking[\"eu-west-1\"]",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511620223753:network-acl/acl-02090e395ce9774b0",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "id": "acl-02090e395ce9774b0",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "511620223753",
            "subnet_ids": [
              "subnet-0467efc6e0af48d56",
              "subnet-065e6d51f6853d34f"
            ],
            "tags": {
              "Name": "eu-west-1_public_nacl"
            },
            "vpc_id": "vpc-0b1e757c06d1a6469"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking[\"eu-west-1\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0dab4a326995e66ef",
            "owner_id": "511620223753",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0656462d0e0dd8431",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "us-east-1a_private_rt"
            },
            "vpc_id": "vpc-0b1e757c06d1a6469"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.ngw",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_nat_gateway.ngw",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e0319a4a4eda3753",
            "owner_id": "511620223753",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0524a5171a044c67e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "us-east-1b_private_rt"
            },
            "vpc_id": "vpc-0b1e757c06d1a6469"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.ngw",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_nat_gateway.ngw",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking[\"eu-west-1\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06e133f974900dc94",
            "owner_id": "511620223753",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0225735c0be243990",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.0.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-09378791dfc25e80b"
              }
            ],
            "tags": {
              "Name": "eu-west-1_public_rt"
            },
            "vpc_id": "vpc-0b1e757c06d1a6469"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_vpc.main",
            "module.vpc-peering.aws_vpc_peering_connection.peer"
          ]
        }
      ]
    },
    {
      "module": "module.networking[\"eu-west-1\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06eb3af7a08027be0",
            "route_table_id": "rtb-0dab4a326995e66ef",
            "subnet_id": "subnet-013ad5e0b3578522c"
          },
          "dependencies": [
            "module.networking.aws_eip.ngw",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_nat_gateway.ngw",
            "module.networking.aws_route_table.private_rt",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff0a197f21fb8781",
            "route_table_id": "rtb-0e0319a4a4eda3753",
            "subnet_id": "subnet-06b4e586dec492fb8"
          },
          "dependencies": [
            "module.networking.aws_eip.ngw",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_nat_gateway.ngw",
            "module.networking.aws_route_table.private_rt",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking[\"eu-west-1\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03fda48858c72f2ff",
            "route_table_id": "rtb-06e133f974900dc94",
            "subnet_id": "subnet-0467efc6e0af48d56"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_route_table.public_rt",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.main",
            "module.vpc-peering.aws_vpc_peering_connection.peer"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e54790d20b1b8639",
            "route_table_id": "rtb-06e133f974900dc94",
            "subnet_id": "subnet-065e6d51f6853d34f"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_route_table.public_rt",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.main",
            "module.vpc-peering.aws_vpc_peering_connection.peer"
          ]
        }
      ]
    },
    {
      "module": "module.networking[\"eu-west-1\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511620223753:security-group/sg-0b6f2b5551ad76dc2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b6f2b5551ad76dc2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20210301150711132100000001",
            "name_prefix": "terraform-",
            "owner_id": "511620223753",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eu-west-1_private_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1e757c06d1a6469"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking[\"eu-west-1\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511620223753:subnet/subnet-013ad5e0b3578522c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.3.0/24",
            "id": "subnet-013ad5e0b3578522c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511620223753",
            "tags": {
              "Name": "us-east-1a_private_subnet"
            },
            "vpc_id": "vpc-0b1e757c06d1a6469"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511620223753:subnet/subnet-06b4e586dec492fb8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.4.0/24",
            "id": "subnet-06b4e586dec492fb8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511620223753",
            "tags": {
              "Name": "us-east-1b_private_subnet"
            },
            "vpc_id": "vpc-0b1e757c06d1a6469"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking[\"eu-west-1\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511620223753:subnet/subnet-0467efc6e0af48d56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-0467efc6e0af48d56",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511620223753",
            "tags": {
              "Name": "us-east-1a_public_subnet"
            },
            "vpc_id": "vpc-0b1e757c06d1a6469"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511620223753:subnet/subnet-065e6d51f6853d34f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-065e6d51f6853d34f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511620223753",
            "tags": {
              "Name": "us-east-1b_public_subnet"
            },
            "vpc_id": "vpc-0b1e757c06d1a6469"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking[\"eu-west-1\"]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511620223753:vpc/vpc-0b1e757c06d1a6469",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-01744cabd0d086358",
            "default_route_table_id": "rtb-0697fe52d4b36e3f4",
            "default_security_group_id": "sg-0afd6cf1fdfcb13d3",
            "dhcp_options_id": "dopt-036d0e034350f8075",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b1e757c06d1a6469",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0697fe52d4b36e3f4",
            "owner_id": "511620223753",
            "tags": {
              "Name": "eu-west-1_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.networking[\"us-east-1\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0a75a5f178be5effb",
            "domain": "vpc",
            "id": "eipalloc-0737c62acaed3cf73",
            "network_border_group": "us-east-1",
            "network_interface": "eni-088ee302970dcc5ae",
            "private_dns": "ip-10-0-1-244.ec2.internal",
            "private_ip": "10.0.1.244",
            "public_dns": "ec2-54-197-181-153.compute-1.amazonaws.com",
            "public_ip": "54.197.181.153",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0655293474afcb2b7",
            "domain": "vpc",
            "id": "eipalloc-0669c58ba7716319a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09af27c1df78ac565",
            "private_dns": "ip-10-0-2-189.ec2.internal",
            "private_ip": "10.0.2.189",
            "public_dns": "ec2-52-70-81-27.compute-1.amazonaws.com",
            "public_ip": "52.70.81.27",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking[\"us-east-1\"]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511620223753:internet-gateway/igw-0811bc0716d85efbe",
            "id": "igw-0811bc0716d85efbe",
            "owner_id": "511620223753",
            "tags": {
              "Name": "us-east-1_gw"
            },
            "vpc_id": "vpc-0aadd4a70cf09289f"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking[\"us-east-1\"]",
      "mode": "managed",
      "type": "aws_lb",
      "name": "public_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "nginx-hello-world-alb-logs-us-east-1",
                "enabled": true
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:511620223753:loadbalancer/app/us-east-1-public-alb/810f675a91a77c49",
            "arn_suffix": "app/us-east-1-public-alb/810f675a91a77c49",
            "dns_name": "us-east-1-public-alb-205948363.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:511620223753:loadbalancer/app/us-east-1-public-alb/810f675a91a77c49",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "us-east-1-public-alb",
            "security_groups": [
              "sg-010c3a8d75fb1662a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0438eb7ea4ba185c4"
              },
              {
                "subnet_id": "subnet-0d0e4bab853650b70"
              }
            ],
            "subnets": [
              "subnet-0438eb7ea4ba185c4",
              "subnet-0d0e4bab853650b70"
            ],
            "tags": {
              "Name": "us-east-1_public_alb"
            },
            "vpc_id": "vpc-0aadd4a70cf09289f",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.networking.aws_security_group.private_security_group",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.main",
            "module.s3-storage.aws_s3_bucket.alb_logs",
            "module.s3-storage.aws_s3_bucket_policy.access_logs"
          ]
        }
      ]
    },
    {
      "module": "module.networking[\"us-east-1\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0737c62acaed3cf73",
            "id": "nat-09026a773a58ae16d",
            "network_interface_id": "eni-088ee302970dcc5ae",
            "private_ip": "10.0.1.244",
            "public_ip": "54.197.181.153",
            "subnet_id": "subnet-0d0e4bab853650b70",
            "tags": {
              "Name": "us-east-1a_ngw"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.ngw",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0669c58ba7716319a",
            "id": "nat-01698b4bd067d59b8",
            "network_interface_id": "eni-09af27c1df78ac565",
            "private_ip": "10.0.2.189",
            "public_ip": "52.70.81.27",
            "subnet_id": "subnet-0438eb7ea4ba185c4",
            "tags": {
              "Name": "us-east-1b_ngw"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.ngw",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking[\"us-east-1\"]",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511620223753:network-acl/acl-08564f12e6912d46c",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "id": "acl-08564f12e6912d46c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "511620223753",
            "subnet_ids": [
              "subnet-0438eb7ea4ba185c4",
              "subnet-0d0e4bab853650b70"
            ],
            "tags": {
              "Name": "us-east-1_public_nacl"
            },
            "vpc_id": "vpc-0aadd4a70cf09289f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking[\"us-east-1\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07f3ee94ee0b66b87",
            "owner_id": "511620223753",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09026a773a58ae16d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "us-east-1a_private_rt"
            },
            "vpc_id": "vpc-0aadd4a70cf09289f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.ngw",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_nat_gateway.ngw",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtb-085019d2fa9858362",
            "owner_id": "511620223753",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01698b4bd067d59b8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "us-east-1b_private_rt"
            },
            "vpc_id": "vpc-0aadd4a70cf09289f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.ngw",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_nat_gateway.ngw",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking[\"us-east-1\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b4384eb596397076",
            "owner_id": "511620223753",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0811bc0716d85efbe",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.1.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-09378791dfc25e80b"
              }
            ],
            "tags": {
              "Name": "us-east-1_public_rt"
            },
            "vpc_id": "vpc-0aadd4a70cf09289f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_vpc.main",
            "module.vpc-peering.aws_vpc_peering_connection.peer"
          ]
        }
      ]
    },
    {
      "module": "module.networking[\"us-east-1\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060f0e2a15622ee94",
            "route_table_id": "rtb-07f3ee94ee0b66b87",
            "subnet_id": "subnet-009e5536c92063b3b"
          },
          "dependencies": [
            "module.networking.aws_eip.ngw",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_nat_gateway.ngw",
            "module.networking.aws_route_table.private_rt",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02596dd849fcc255c",
            "route_table_id": "rtb-085019d2fa9858362",
            "subnet_id": "subnet-02e14f075abee0565"
          },
          "dependencies": [
            "module.networking.aws_eip.ngw",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_nat_gateway.ngw",
            "module.networking.aws_route_table.private_rt",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking[\"us-east-1\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6c3d1f4ccf0ad31",
            "route_table_id": "rtb-0b4384eb596397076",
            "subnet_id": "subnet-0d0e4bab853650b70"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_route_table.public_rt",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.main",
            "module.vpc-peering.aws_vpc_peering_connection.peer"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09cc19cf0bd8bbda6",
            "route_table_id": "rtb-0b4384eb596397076",
            "subnet_id": "subnet-0438eb7ea4ba185c4"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_route_table.public_rt",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.main",
            "module.vpc-peering.aws_vpc_peering_connection.peer"
          ]
        }
      ]
    },
    {
      "module": "module.networking[\"us-east-1\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511620223753:security-group/sg-010c3a8d75fb1662a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-010c3a8d75fb1662a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20210301150713106600000002",
            "name_prefix": "terraform-",
            "owner_id": "511620223753",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "us-east-1_private_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aadd4a70cf09289f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking[\"us-east-1\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511620223753:subnet/subnet-009e5536c92063b3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-009e5536c92063b3b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511620223753",
            "tags": {
              "Name": "us-east-1a_private_subnet"
            },
            "vpc_id": "vpc-0aadd4a70cf09289f"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511620223753:subnet/subnet-02e14f075abee0565",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-02e14f075abee0565",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511620223753",
            "tags": {
              "Name": "us-east-1b_private_subnet"
            },
            "vpc_id": "vpc-0aadd4a70cf09289f"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking[\"us-east-1\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511620223753:subnet/subnet-0d0e4bab853650b70",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0d0e4bab853650b70",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511620223753",
            "tags": {
              "Name": "us-east-1a_public_subnet"
            },
            "vpc_id": "vpc-0aadd4a70cf09289f"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511620223753:subnet/subnet-0438eb7ea4ba185c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0438eb7ea4ba185c4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511620223753",
            "tags": {
              "Name": "us-east-1b_public_subnet"
            },
            "vpc_id": "vpc-0aadd4a70cf09289f"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking[\"us-east-1\"]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511620223753:vpc/vpc-0aadd4a70cf09289f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cca34de973d2b45b",
            "default_route_table_id": "rtb-05c4670b6c72632b2",
            "default_security_group_id": "sg-0c5d17fa434941593",
            "dhcp_options_id": "dopt-036d0e034350f8075",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0aadd4a70cf09289f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05c4670b6c72632b2",
            "owner_id": "511620223753",
            "tags": {
              "Name": "us-east-1_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc-peering",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": false,
            "id": "pcx-09378791dfc25e80b",
            "peer_owner_id": "511620223753",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0aadd4a70cf09289f",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "vpc_id": "vpc-0b1e757c06d1a6469"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-peering",
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-09378791dfc25e80b",
            "peer_owner_id": "511620223753",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0aadd4a70cf09289f",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "vpc_id": "vpc-0b1e757c06d1a6469",
            "vpc_peering_connection_id": "pcx-09378791dfc25e80b"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.vpc-peering.aws_vpc_peering_connection.peer"
          ]
        }
      ]
    }
  ]
}